# MAI_SEM3_OS

./: .gitignore  README.md
.devcontainer/: Dockerfile  devcontainer.json
course/: CMakeLists.txt  config.yaml
course/include/: DAG.h  Executor.h  Job.h
course/src/: DAG.cpp  Executor.cpp  main.cpp
lab1/: CMakeLists.txt  main.cpp  trace.txt
lab1/include/: solution.hpp
lab1/src/: child.cpp  solution.cpp
lab2/: CMakeLists.txt  main.cpp  trace.txt
lab2/include/: solution.hpp
lab2/src/: solution.cpp
lab3/: CMakeLists.txt  child.cpp  main.cpp
lab4/: CMakeLists.txt  dynamic_logs.txt  static_logs.txt
lab4/app/: main_dynamic.cpp  main_static.cpp
lab4/include/: lib_functions.hpp
lab4/lib/: impl1.cpp  impl2.cpp
